Added Whitepapers Section
Added Whitepapers to nav.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,5 +2,6 @@
     <li class="nav-home" role="menuitem"><a href="{{site.baseurl}}">Home</a></li>
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
     <li class="nav-technology" role="menuitem"><a href="{{site.baseurl}}tag/technology/">Technology</a></li>
-    <li class="nav-web" role="menuitem"><a href="https://jdnayak.com">JDNayak.com</a></li>
+    <li class="whitepaper" role="menuitem"><a href="{{site.baseurl}}whitepapars/">whitepapers</a></li>
+    <li class="nav-try-ghost" role="menuitem"><a href="https://jdnayak.com">JDNayak.com</a></li>
 </ul>
