Added CV and Linkedin to Nav

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,5 +3,7 @@
     <li class="nav-about" role="menuitem"><a href="{{site.baseurl}}about/">About</a></li>
     <li class="nav-technology" role="menuitem"><a href="{{site.baseurl}}tag/technology/">Technology</a></li>
     <li class="whitepaper" role="menuitem"><a href="{{site.baseurl}}whitepapars/">whitepapers</a></li>
+    <li class="cv" role="menuitem"><a href="{{site.baseurl}}cv/">cv</a></li>
+    <li class="linkedin" role="menuitem"><a href="https://www.linkedin.com/in/jnanadarshan/">linkedin</a></li>
     <li class="nav-try-ghost" role="menuitem"><a href="https://jdnayak.com">JDNayak.com</a></li>
 </ul>
