--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -13,6 +13,9 @@
     </div>
     <div class="site-nav-right">
         <div class="social-links">
+          {% if site.facebook %}
+              <a class="social-link social-link-fb" href="https://linkedin.com/in/{{ site.facebook }}" target="_blank" rel="noopener">{% include linkedin.html %}</a>
+          {% endif %}
             {% if site.facebook %}
                 <a class="social-link social-link-fb" href="https://facebook.com/{{ site.facebook }}" target="_blank" rel="noopener">{% include facebook.html %}</a>
             {% endif %}
