--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,6 +4,6 @@
     <li class="nav-technology" role="menuitem"><a href="{{site.baseurl}}tag/technology/">Technology</a></li>
     <li class="whitepaper" role="menuitem"><a href="{{site.baseurl}}whitepapars/">whitepapers</a></li>
     <li class="tools" role="menuitem"><a href="{{site.baseurl}}tools/">tools</a></li>
-    <li class="cv" role="menuitem"><a href="{{site.baseurl}}cv">cv</a></li>
+    <li class="cv" role="menuitem"><a href="{{site.baseurl}}#">cv</a></li>
     <li class="nav-try-ghost" role="menuitem"><a href="https://jdnayak.com">JDNayak.com</a></li>
 </ul>
