--- a/_includes/floating-header.html
+++ b/_includes/floating-header.html
@@ -19,7 +19,7 @@
             onclick="window.open(this.href, 'share-facebook','width=580,height=296');return false;">
             {% include facebook.html %}
         </a>
-        <a class="floating-header-share-tw" href="https://twitter.com/share?text={{ page.title | url_encode }}&amp;url={{ site.production_url }}{{ page.url }}"
+        <a class="floating-header-share-tw" href="https://www.linkedin.com/sharing/share-offsite/?url={{ page.title | url_encode }}&amp;url={{ site.production_url }}{{ page.url }}"
             onclick="window.open(this.href, 'share-twitter', 'width=550,height=235');return false;">
             {% include linkedin.html %}
         </a>
